--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,5 +1,10 @@
+* {
+  padding: 0;
+  margin: 0; }
+
 #quick_description {
-  padding: 18% 0; }
+  text-align: center;
+  padding-top: 30vh; }
 
 #my_name {
   font-family: 'Major Mono Display', monospace; }
