--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2,6 +2,9 @@
   padding: 0;
   margin: 0; }
 
+#social_medias {
+  padding-top: 5vh; }
+
 #quick_description {
   text-align: center;
   padding-top: 30vh; }
