--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -5,16 +5,14 @@
 *:focus {
   outline: none; }
 
-#social_medias img {
-  transform: translateY(7vh);
-  display: block;
-  margin-left: auto;
-  margin-right: auto; }
+#social_medias {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  padding-top: 7vh; }
 
-.icon {
-  float: left;
-  padding: 5px;
-  transform: translateX(95vh); }
+#social_medias img {
+  margin: 5px; }
 
 #quick_description {
   text-align: center;
