--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -7,12 +7,12 @@
 
 #social_medias {
   display: flex;
-  flex-wrap: wrap;
   justify-content: center;
-  padding-top: 7vh; }
+  padding-top: 6.5vh; }
 
 #social_medias img {
-  margin: 5px; }
+  margin-right: 2px;
+  margin-left: 2px; }
 
 #quick_description {
   text-align: center;
@@ -61,6 +61,3 @@
   .social-link:hover {
     background-color: #0099cc;
     text-decoration: none; }
-
-.icon-github {
-  content: url("/images/GitHub-Mark-64px.png"); }
