--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -8,7 +8,8 @@
 #social_medias {
   display: flex;
   justify-content: center;
-  padding-top: 6.5vh; }
+  align-items: center;
+  height: 20vh; }
 
 #social_medias img {
   margin-right: 2px;
