--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,60 +1,1 @@
-* {
-  padding: 0;
-  margin: 0; }
-
-*:focus {
-  outline: none; }
-
-#home {
-  height: 79vh;
-  background: gainsboro; }
-
-#quick-description {
-  text-align: center;
-  transform: translateY(35vh); }
-
-#my-name {
-  font-family: 'Major Mono Display', monospace; }
-
-#short-description {
-  font-family: 'B612 Mono', monospace; }
-
-#slider a {
-  padding-top: 60px;
-  position: absolute;
-  bottom: 22vh;
-  left: 50%;
-  color: white; }
-
-#slider a span {
-  position: absolute;
-  top: 0;
-  left: 50%;
-  width: 24px;
-  height: 24px;
-  margin-left: -12px;
-  border-left: 1px solid white;
-  border-bottom: 1px solid white;
-  -webkit-transform: rotate(-45deg);
-  transform: rotate(-45deg);
-  box-sizing: border-box; }
-
-#slider a:hover {
-  opacity: .5; }
-
-#skills {
-  height: 100vh;
-  background: white; }
-
-#footer {
-  background: gainsboro; }
-
-#social-medias {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  height: 20vh; }
-
-#social-medias img {
-  margin-right: 2px;
-  margin-left: 2px; }
+*{padding:0;margin:0}*:focus{outline:none}#home{height:79vh;background:gainsboro}#quick-description{text-align:center;transform:translateY(35vh)}#my-name{font-family:'Major Mono Display', monospace}#short-description{font-family:'B612 Mono', monospace}#slider a{padding-top:60px;position:absolute;bottom:22vh;left:50%;color:white}#slider a span{position:absolute;top:0;left:50%;width:24px;height:24px;margin-left:-12px;border-left:1px solid white;border-bottom:1px solid white;-webkit-transform:rotate(-45deg);transform:rotate(-45deg);box-sizing:border-box}#slider a:hover{opacity:.5}#skills{height:100vh;background:white}#footer{background:gainsboro}#social-medias{display:flex;justify-content:center;align-items:center;height:20vh}#social-medias img{margin-right:2px;margin-left:2px}
